<resources>
    <string name="app_name">Aaj Kya Khaye?</string>
    <string name="what_is_today_s_menu">What is Today\'s menu?</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="evening_snacks">Evening Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="click_to_know">Click to Know</string>
    <string name="test">Test</string>
    <string name="back_to_main">Back to Main</string>
</resources>
