<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:text="@string/what_is_today_s_menu"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <CheckBox
                style="@style/CheckBoxFormat"
                android:text="@string/breakfast" />

            <CheckBox
                style="@style/CheckBoxFormat"
                android:text="@string/lunch" />

            <CheckBox
                style="@style/CheckBoxFormat"
                android:text="@string/evening_snacks" />

            <CheckBox
                style="@style/CheckBoxFormat"
                android:text="@string/dinner" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/know_button"
            android:padding="10dp"
            android:text="@string/click_to_know"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>